k8s/k8s-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-svc
  namespace: todo-app

spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
